--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ requests = "^2.32.3"
 replit = "^4.1.1"
 flask = "^3.1.0"
 pytz = "^2025.2"
+sift-stack-py = "^0.7.0"
 
 [tool.pyright]
 # https://github.com/microsoft/pyright/blob/main/docs/configuration.md
