--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ replit = "^4.1.1"
 flask = "^3.1.0"
 pytz = "^2025.2"
 sift-stack-py = "^0.7.0"
+beautifulsoup4 = "^4.13.5"
 
 [tool.pyright]
 # https://github.com/microsoft/pyright/blob/main/docs/configuration.md
